get pods & get nodes in container